添加了CoordinatorLayout   AppBarLayout   CollapsingToolbarLayout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,45 @@
 <resources>
     <string name="app_name">Datum</string>
+    <string name="yinyan_content">本隐私协议是您与本公司之间关于用户注册、登录、使用“WiFi万能钥匙”服务所订立的隐私协议。本隐私协议描述本公司与您之间关于本软件服务相关方面的权利义务。WiFi万能钥匙（官网地址： www.wifi.com）在此特别提醒您在使用本软件前认真阅读、充分理解本隐私协议（下称“隐私协议”）。您在手机或其他设备（以下统称“设备”）上使用WiFi万能钥匙iOS平台客户端（下称“本软件”）即表明您已经阅读、理解并同意受本协议条款和其他适用法律约束，不论您是否为WiFi万能钥匙的注册用户。
+\n信息的收集：
+\n您提供给我们的信息
+\n我们收集并存储任何您提供给我们或允许我们使用的信息，该类信息的收集和存储是为了保证您能更好地享受我们提供的服务。此外，我们将按照国家相关法律法规的要求，保存用户提供给我们或允许我们使用的信息。该等信息可能包括但不限于您使用搜索功能时输入的WiFi热点名称、商户名、位置信息或日志信息。
+\n我们向您收集的信息
+\n为保证您能够顺畅地与我们进行互动，或更好地使用我们的产品和服务，我们可能需要向您收集：
+\n• 位置信息：如果您允许WiFi万能钥匙通过您的移动操作系统使用的权限系统访问定位服务，我们将于应用程序在前台或后台运行时收集您设备的精确位置。您可以自主选择关闭定位，但是这可能会影响您享受本软件提供的服务。
+\n• 日志信息：指当您的浏览器访问wifi.com(51y5.net)中的广告及其他内容时，系统可能通过“cookies”或其他方法自动采集相应的技术信息，包括您的IP地址、浏览器类型和语言、系统类型、是否使用软件访问特定的功能、访问时间、引用的网站统一资源定址器（URL）。
+\n• 硬件信息：我们可以收集关于您移动设备的信息，包括但不限于操作系统和版本、首选语言、唯一设备标识符、广告标识符等。
+\n• 使用和偏好信息：指当您使用WiFi万能钥匙或当您的浏览器访问wifi.com(51y5.net)中的内容时，我们可能会收集与您如何使用我们的有关服务、所表达的偏好和所选设置有关的信息。在某些情况下，我们通过使用创建和维护唯一标识符的cookie、像素标签和类似技术实现以上目的。
+\n• 其他信息：当您申请成为WiFi万能钥匙的注册用户，下载或使用WiFi万能钥匙创建或推广的手机应用时，我们可能接收到您的手机号码、设备识别符等信息。
+\n信息的使用:
+\n我们可将所收集的您的信息用于：
+\n• 提供、维护和改善我们的有关服务，包括但不限于，提供您申请的产品和服务（及发送相关信息）、开发新功能、提供客户支持、开发安全功能、验证用户、发送产品更新和管理消息等；
+\n• 执行内部运营，包括，防止欺诈和滥用我们的有关服务；解决软件错误和操作问题；进行数据分析、测试和研究；监控和分析本软件的使用情况和运行状态；
+\n• 使我们更加了解您如何接入和使用我们的服务，从而针对性地回应您的个性化需求，例如语言设定、位置设定、个性化的帮助服务和指示，或对您和其他用户作出其他方面的回应；
+\n• 根据适用法律向您提供与您更加相关的广告以替代普遍投放的广告；
+\n• 评估我们服务中的广告和其他促销及推广活动的效果，个性化和改善有关服务，包括提供或推荐功能、内容、引荐和广告；
+\n• 软件认证或管理软件升级；
+\n• 让您参与有关我们产品和服务的调查。
+\n保护您隐私郑重声明
+\nWiFi万能钥匙不会未经您许可获取您的隐私信息,包括但不限于身份信息、WiFi密码、网络访问记录、银行账号以及其他财务类信息，除本隐私协议中另有规定的情形外，WiFi万能钥匙不会对外披露或向第三方提供您的任何信息。同时，WiFi万能钥匙软件安全检测合格（查看检测报告）并成为工信部下属权威安全机构行业成员。
+\n本条隐私权声明不适用于任何向您提供服务的第三方主体，包括那些可能向WiFi万能钥匙披露信息的第三方。
+\n保护用户(特别是未成年人)的隐私是我们的一项基本政策，因此，若父母(监护人)希望未成年人(尤其是十岁以下子女)得以使用本服务，必须以父母(监护人)名义申请注册或下载使用，在接受本软件服务时，应以法定监护人身份加以判断本软件服务是否符合于未成年人。
+\n本公司不承担用户的如下风险：
+\n（1）因不可抗拒因素可能引起的个人信息丢失、泄露等风险；
+\n（2）用户在使用本软件访问第三方网站时，因第三方网站及相关内容所可能导致的用户隐私泄露的风险。
+\n信息的分享：
+\nWiFi万能钥匙可能为以下需要而保留、保存或披露您的个人信息：
+\n• 遵守相应的法律法规或其他法律程序的规定；
+\n• 响应相关政府机关或执法人员的要求；
+\n• 为遵守相应的法律法规、维护社会公共利益，或保护WiFi万能钥匙的其他用户或雇员的人身和财产安全或合法权益所合理必需的用途。
+\n本隐私协议的变更：
+\nWiFi万能钥匙有权在任何时间修改本协议条款，并于公布在平台之时起生效。如果WiFi万能钥匙对我们处理您个人信息的方式或本协议做出重大变更，我们将通过有关服务向您提供通知。我们鼓励您定期阅读本协议，了解有关我们隐私实务的最新信息。 在本公司修改隐私协议条款后，如果您不接受修改后的条款，请立即停止使用WiFi万能钥匙，您继续使用WiFi万能钥匙将被视为已接受了修改后的协议。
+\n其他
+\n1、本公司郑重提醒您注意本隐私协议中免除本公司责任和加重您义务的条款，请您仔细阅读，自主考虑风险。未成年人应在法定监护人的陪同下阅读本隐私协议。以上各项条款内容的最终解释权及修改权归本公司所有。
+\n2、本隐私协议所定的任何条款的部分或全部无效者，不影响其它条款的效力。
+\n3、本隐私协议的解释、效力及纠纷的解决，适用中华人民共和国法律。若您和本公司之间发生任何纠纷或争议，首先应友好协商解决，协商不成的，您在此完全同意将纠纷或争议提交上海市浦东新区人民法院通过诉讼方式解决。
+\n4、本隐私协议的版权由本公司所有，本公司保留对上述条款的最终解释权。
+\n5、若您对本隐私协议及本软件服务有任何意见，
+\n欢迎垂询本公司客服中心。
+</string>
 </resources>
