添加微博和qq的授权登录

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Datum</string>
+    <string name="umeng_socialize_male">Datum</string>
     <string name="yinyan_content">本隐私协议是您与本公司之间关于用户注册、登录、使用“WiFi万能钥匙”服务所订立的隐私协议。本隐私协议描述本公司与您之间关于本软件服务相关方面的权利义务。WiFi万能钥匙（官网地址： www.wifi.com）在此特别提醒您在使用本软件前认真阅读、充分理解本隐私协议（下称“隐私协议”）。您在手机或其他设备（以下统称“设备”）上使用WiFi万能钥匙iOS平台客户端（下称“本软件”）即表明您已经阅读、理解并同意受本协议条款和其他适用法律约束，不论您是否为WiFi万能钥匙的注册用户。
 \n信息的收集：
 \n您提供给我们的信息
